--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ osx_image: xcode12
 
 language: swift
 xcode_project: HalfTunes.xcodeproj # path to your xcodeproj folder
-xcode_scheme: HalfTunesTests
+xcode_scheme: HalfTunes
 xcode_destination: platform=iOS Simulator,OS=11.1,name=iPad Pro (9.7-inch)
